--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install Lambda dependencies
         run: |
           cd src
-          pip install -r ../requirements.txt
+          pip install -r requirements.txt
           pip install pytest pytest-cov
 
       - name: Run Lambda tests
