feat: add pytest and pytest-cov to backend dependencies for improved testing

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,6 +73,7 @@ jobs:
         run: |
           cd backend
           pip install -r requirements.txt
+          pip install pytest pytest-cov
 
       - name: Run Backend tests
         run: |
